--- a/pom.xml
+++ b/pom.xml
@@ -39,12 +39,22 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
 
+        <!-- DEPENDENCY VERSIONS -->
+        <lombok.version>1.18.4</lombok.version>
+
         <!-- PLUGIN VERSIONS -->
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
     </properties>
 
 
     <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
