--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 
         <!-- DEPENDENCY VERSIONS -->
         <lombok.version>1.18.4</lombok.version>
+        <guava.version>27.0.1-jre</guava.version>
 
         <!-- PLUGIN VERSIONS -->
         <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
@@ -48,6 +49,12 @@
 
 
     <dependencies>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
