Simplied matchmaking and made it safer

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,3 +9,8 @@ codeosseum:
 
   eventbus:
     executorThreadCount: 2
+
+  matchmaking:
+    schedule:
+      initialDelaySeconds: 10
+      delaySeconds: 10
